Add draggable links for plugin

--- a/dropbox-saver.html
+++ b/dropbox-saver.html
@@ -121,6 +121,8 @@ Error message and password prompt
 
 <li>$:/DefaultTiddlers</li>
 
+<li>$:/Import</li>
+
 <li>$:/isEncrypted</li>
 
 <li>$:/plugins/brooksn/dropbox-saver</li>
@@ -129,7 +131,11 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/tab-1566211715</li>
+
 <li>$:/state/tab-1749438307</li>
+
+<li>$:/state/tab/sidebar--1835078512</li>
 
 <li>$:/StoryList</li>
 
@@ -138,6 +144,8 @@ Error message and password prompt
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
 <li>$:/themes/tiddlywiki/vanilla</li>
+
+<li>Manually installing a plugin</li>
 
 </ul>
 </p>
@@ -6198,8 +6206,15 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20160122100902419" modified="20160122100902419" title="$:/DefaultTiddlers">
-<pre>$:/plugins/brooksn/dropbox-saver</pre>
+<div created="20160122100902419" modified="20160122102258875" title="$:/DefaultTiddlers">
+<pre>[[Manually installing a plugin]]
+$:/plugins/brooksn/dropbox-saver/readme
+$:/plugins/brooksn/dropbox-saver</pre>
+</div>
+<div status="complete" title="$:/Import">
+<pre>The following tiddlers were imported:
+
+# [[Manually installing a plugin]]</pre>
 </div>
 <div title="$:/isEncrypted">
 <pre>no</pre>
@@ -6240,10 +6255,16 @@ Error message and password prompt
 <div created="20160122100904998" modified="20160122100906968" title="$:/SiteTitle">
 <pre>dropbox-saver demo</pre>
 </div>
-<div created="20160122100851511" modified="20160122100851511" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Plugins</pre>
+<div created="20160122102238494" modified="20160122102248206" title="$:/state/tab-1566211715">
+<pre>$:/core/ui/TiddlerInfo/Advanced</pre>
 </div>
-<div list="$:/plugins/brooksn/dropbox-saver $:/plugins/brooksn/dropbox-saver/readme" title="$:/StoryList">
+<div created="20160122100851511" modified="20160122101806363" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
+</div>
+<div created="20160122102158169" modified="20160122102158169" title="$:/state/tab/sidebar--1835078512">
+<pre>$:/core/ui/SideBar/Recent</pre>
+</div>
+<div list="$:/plugins/brooksn/dropbox-saver/readme $:/plugins/brooksn/dropbox-saver" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -6364,6 +6385,15 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20160107222430613" modified="20160122102054493" tags="Plugins" title="Manually installing a plugin" type="text/vnd.tiddlywiki">
+<pre># Create a backup of your current TiddlyWiki HTML file ([[just in case|The First Rule of Using TiddlyWiki]])
+# Open your TiddlyWiki in a browser
+# In another browser window, find a link to the plugin, e.g. [[$:/plugins/brooksn/dropbox-saver]]. You will typically find these links on the home page of the plugin (for example, https://github.com/brooksn/tiddlywiki-dropbox-saver)
+# Drag the link [[$:/plugins/brooksn/dropbox-saver]] to the browser window containing your TiddlyWiki
+# Save your TiddlyWiki
+# ''Refresh the page so that TiddlyWiki loads the new plugin''
+# The plugin should now be available for use</pre>
 </div>
 
 </div>
